--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuetify-markdown-editor": "^3.3.3",
+    "vuetify-mask": "^1.1.2",
     "vuex": "^3.4.0",
     "xlsx": "^0.17.3"
   },
