implaments: authontication phone number

--- a/Docker/dev/.env
+++ b/Docker/dev/.env
@@ -23,6 +23,9 @@ CHOKIDAR_INTERVAL=100
 # Vue
 VUE_APP_API_ROOT_URL=http://localhost:8000/
 
+# BOT
+DJANGO_APP_API_ROOT_URL=http://django:8000/
+
 # Additional variables from the './.env.secret' file:
 # SECRET_KEY
 # TELEGRAM_BOT_API_TOKEN
