--- a/Docker/prod/.env
+++ b/Docker/prod/.env
@@ -19,6 +19,8 @@ DJANGO_SETTINGS_MODULE=project.settings.production
 # Vue
 VUE_APP_API_ROOT_URL=https://api.loan-application-bot.baraba.sh/
 
+# BOT
+DJANGO_APP_API_ROOT_URL=http://django:8000/
 
 # Additional variables from the './.env.secret' file:
 # SECRET_KEY
