--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "luxon": "^2.3.1",
