--- a/Docker/dev/vuejs/Dockerfile
+++ b/Docker/dev/vuejs/Dockerfile
@@ -10,10 +10,9 @@ RUN chown -R node:node /usr/src/app
 
 RUN yarn global add @vue/cli
 
-USER node
 
 COPY ./vuejs/package*.json ./vuejs/yarn.lock ./
 
-RUN yarn install --frozen-lockfile --check-files
+RUN yarn install --check-files
 
 COPY --chown=node:node ./vuejs/ /usr/src/app/
