--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -16,6 +16,7 @@
     "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.2.11",
     "vuetify-markdown-editor": "^3.3.3",
     "vuetify-mask": "^1.1.2",
