--- a/Docker/prod/vuejs/Dockerfile
+++ b/Docker/prod/vuejs/Dockerfile
@@ -10,9 +10,7 @@ RUN chown -R node:node /usr/src/app
 
 RUN yarn global add @vue/cli
 
-USER node
-
-COPY ./vuejs/package*.json ./vuejs/yarn.lock ./
+COPY ./vuejs/package*.json ./vuejs/yarn.lock ./vuejs/
 
 RUN yarn install --frozen-lockfile --check-files
 
