--- a/Docker/prod/.env
+++ b/Docker/prod/.env
@@ -11,7 +11,7 @@ SQL_HOST=db
 SQL_PORT=5432
 
 # CORS
-ALLOWED_CLIENT_DOMAIN_NAME=https://loan-application-bot.baraba.sh
+ALLOWED_CLIENT_DOMAIN_NAME=*
 
 # Celery
 DJANGO_SETTINGS_MODULE=project.settings.production
