--- a/Docker/dev/.env
+++ b/Docker/dev/.env
@@ -10,7 +10,7 @@ SQL_HOST=db
 SQL_PORT=5432
 
 # CORS
-ALLOWED_CLIENT_DOMAIN_NAME=http://localhost:8080
+ALLOWED_CLIENT_DOMAIN_NAME=*
 
 # Celery
 DJANGO_SETTINGS_MODULE=project.settings.dev
