--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -17,7 +17,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-the-mask": "^0.11.1",
-    "vuetify": "^2.2.11",
+    "vuetify": "2.6.12",
     "vuetify-markdown-editor": "^3.3.3",
     "vuetify-mask": "^1.1.2",
     "vuex": "^3.4.0",
