fix: host to env

--- a/Docker/prod/.env
+++ b/Docker/prod/.env
@@ -21,6 +21,7 @@ VUE_APP_API_ROOT_URL=https://api.loan-application-bot.baraba.sh/
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
+DOMAIN_APP_URL=https://rko-bot.spaaace.io
 
 # Additional variables from the './.env.secret' file:
 # SECRET_KEY
