--- a/Docker/dev/.env
+++ b/Docker/dev/.env
@@ -25,6 +25,7 @@ VUE_APP_API_ROOT_URL=http://localhost:8000/
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
+DOMAIN_APP_URL=https://rko-bot.spaaace.io
 
 # Additional variables from the './.env.secret' file:
 # SECRET_KEY
