feat: example and DADATA

--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -22,6 +22,7 @@ CHOKIDAR_INTERVAL=100
 
 # Vue
 VUE_APP_API_ROOT_URL=http://localhost:8000/
+TOKEN_DADATA=24b001b01c74fdf306826d52ff2a996b8f96226b
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
