--- a/Docker/prod/.env.example
+++ b/Docker/prod/.env.example
@@ -18,6 +18,7 @@ DJANGO_SETTINGS_MODULE=project.settings.production
 
 # Vue
 VUE_APP_API_ROOT_URL=https://api.loan-application-bot.baraba.sh/
+TOKEN_DADATA=24b001b01c74fdf306826d52ff2a996b8f96226b
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
