fix dev example

--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -10,7 +10,7 @@ SQL_HOST=db
 SQL_PORT=5432
 
 # CORS
-ALLOWED_CLIENT_DOMAIN_NAME=*
+ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 
 # Celery
 DJANGO_SETTINGS_MODULE=project.settings.dev
