--- a/Docker/dev/.env.secret.example
+++ b/Docker/dev/.env.secret.example
@@ -1,2 +1,8 @@
+# Django
 SECRET_KEY=1123123123123123
+
+# BOT
 TELEGRAM_BOT_API_TOKEN=5659634672:AAF2XNhA3AeeEZ69OSaZYvEMi-8oEMafR40
+
+#VUE
+TOKEN_DADATA=24b001b01c74fdf306826d52ff2a996b8f96226b
