--- a/Docker/prod/.env.example
+++ b/Docker/prod/.env.example
@@ -10,14 +10,11 @@ SQL_PASSWORD=postgres
 SQL_HOST=db
 SQL_PORT=5432
 
-# CORS
+# Django
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 
 # Celery
 DJANGO_SETTINGS_MODULE=project.settings.production
-
-# Vue
-TOKEN_DADATA=24b001b01c74fdf306826d52ff2a996b8f96226b
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
