--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -9,19 +9,17 @@ SQL_PASSWORD=postgres
 SQL_HOST=db
 SQL_PORT=5432
 
-# CORS
+# Django
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 
 # Celery
 DJANGO_SETTINGS_MODULE=project.settings.dev
 
-# Node.js
+
+# Vue
 NODE_ENV=development
 CHOKIDAR_USEPOLLING=true
 CHOKIDAR_INTERVAL=100
-
-# Vue
-TOKEN_DADATA=24b001b01c74fdf306826d52ff2a996b8f96226b
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
