--- a/Docker/prod/.env.example
+++ b/Docker/prod/.env.example
@@ -2,7 +2,7 @@
 COMPOSE_PROJECT_NAME=loan_application_bot
 DOMAIN_NAME=api.loan-application-bot.baraba.sh
 
-# Postgres
+# Postgres and Django
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=postgres
 SQL_USER=postgres
@@ -13,7 +13,7 @@ SQL_PORT=5432
 # Django
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 
-# Celery
+# Celery and Django
 DJANGO_SETTINGS_MODULE=project.settings.production
 
 # BOT
