--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -1,7 +1,7 @@
 # General
 COMPOSE_PROJECT_NAME=loan_application_bot_dev
 
-# Postgres
+# Postgres and Django
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=postgres
 SQL_USER=postgres
@@ -12,7 +12,7 @@ SQL_PORT=5432
 # Django
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 
-# Celery
+# Celery and Django
 DJANGO_SETTINGS_MODULE=project.settings.dev
 
 
