feat: add env host api

--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -20,6 +20,7 @@ DJANGO_SETTINGS_MODULE=project.settings.dev
 NODE_ENV=development
 CHOKIDAR_USEPOLLING=true
 CHOKIDAR_INTERVAL=100
+VUE_APP_HOST_API=https://rko-bot.spaaace.io
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
