--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -11,6 +11,7 @@ SQL_PORT=5432
 
 # Django
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
+DJANGO_APP_API_BANK=rko-bot.spaaace.io
 
 # Celery and Django
 DJANGO_SETTINGS_MODULE=project.settings.dev
