--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -12,6 +12,8 @@ SQL_PORT=5432
 # Django
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 DJANGO_APP_API_BANK=rko-bot.spaaace.io
+DJANGO_APP_API_BANK_ENABLE=disable # enable/disable
+
 
 # Celery and Django
 DJANGO_SETTINGS_MODULE=project.settings.dev
