feat: DJANGO_APP_DOMAIN_STORAGE in .env

--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -13,6 +13,7 @@ SQL_PORT=5432
 ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
 DJANGO_APP_API_BANK=rko-bot.spaaace.io
 DJANGO_APP_API_BANK_ENABLE=disable # enable/disable
+DJANGO_APP_DOMAIN_STORAGE=http://localhost:8000
 
 
 # Celery and Django
