feat: user RABBITMQ

--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -19,6 +19,10 @@ DJANGO_APP_DOMAIN_STORAGE=http://localhost:8000
 # Celery and Django
 DJANGO_SETTINGS_MODULE=project.settings.dev
 
+# Celery, django, RABBITMQ
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=admin
+
 
 # Vue
 NODE_ENV=development
