--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -10,8 +10,9 @@ SQL_HOST=db
 SQL_PORT=5432
 
 # Django
-ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
-DJANGO_APP_API_BANK=rko-bot.spaaace.io
+ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io,django
+DJANGO_APP_API_BANK=http://localhost:8000
+DJANGO_APP_DOMAIN_DJANGO=http://localhost:8000
 DJANGO_APP_API_BANK_ENABLE=disable # enable/disable
 DJANGO_APP_DOMAIN_STORAGE=http://localhost:8000
 
