--- a/Docker/dev/vuejs/Dockerfile
+++ b/Docker/dev/vuejs/Dockerfile
@@ -8,16 +8,16 @@ RUN mkdir -p /usr/src/app/node_modules
 
 RUN chown -R node:node /usr/src/app
 
-RUN yarn global add @vue/cli
-
-COPY ./vuejs/package*.json ./vuejs/yarn.lock ./
-
-RUN yarn install --check-files
-
-RUN yarn add vue-the-mask
-
-RUN yarn add vuetify@2.6.12
+# RUN npm install -g @vue/cli
 
 COPY --chown=node:node ./vuejs/ /usr/src/app/
+
+RUN npm install --check-files
+
+# RUN npm install vue-the-mask
+
+# RUN npm install vuetify@2.6.12
+
+
 
 EXPOSE 8080
