--- a/Docker/dev/.env.example
+++ b/Docker/dev/.env.example
@@ -16,6 +16,8 @@ DJANGO_APP_DOMAIN_DJANGO=http://localhost:8000
 DJANGO_APP_API_BANK_ENABLE=disable # enable/disable
 DJANGO_APP_DOMAIN_STORAGE=http://localhost:8000
 
+SMS_URL=http://proxy.persimmon-develop.moos.solutions/api/mfm/send
+SMS_MESSAGE=TEST CODE {code}
 
 # Celery and Django
 DJANGO_SETTINGS_MODULE=project.settings.dev
