--- a/Docker/prod/.env.example
+++ b/Docker/prod/.env.example
@@ -1,6 +1,5 @@
 # General
-COMPOSE_PROJECT_NAME=loan_application_bot
-DOMAIN_NAME=api.loan-application-bot.baraba.sh
+COMPOSE_PROJECT_NAME=loan_application_bot_dev
 
 # Postgres and Django
 SQL_ENGINE=django.db.backends.postgresql
@@ -11,10 +10,26 @@ SQL_HOST=db
 SQL_PORT=5432
 
 # Django
-ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io
+ALLOWED_DOMAIN_NAME=rko-bot.spaaace.io,django
+DJANGO_APP_API_BANK=http://localhost:8000
+DJANGO_APP_API_BANK_ENABLE=disable # enable/disable
+DJANGO_APP_DOMAIN_STORAGE=http://localhost:8000
+
+SMS_URL=http://proxy.persimmon-develop.moos.solutions/api/mfm/send
+SMS_MESSAGE=TEST CODE {code}
 
 # Celery and Django
-DJANGO_SETTINGS_MODULE=project.settings.production
+DJANGO_SETTINGS_MODULE=project.settings.dev
+
+# Celery, django, RABBITMQ
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=admin
+
+
+# Vue
+CHOKIDAR_USEPOLLING=true
+CHOKIDAR_INTERVAL=100
+VUE_APP_HOST_API=https://rko-bot.spaaace.io
 
 # BOT
 DJANGO_APP_API_ROOT_URL=http://django:8000/
